--- a/.gitignore
+++ b/.gitignore
@@ -93,6 +93,7 @@ iOSInjectionProject/
 .firebaserc
 firebase-debug.log
 firebase-debug.*.log
+GoogleService-Info.plist
 
 # Xcode 14
 *.xcodeproj/project.xcworkspace/xcshareddata/WorkspaceSettings.xcsettings
